--- a/blackjack.html
+++ b/blackjack.html
@@ -6,5 +6,6 @@
   <body>
     <script src="createCardDeck.js"></script>
     <script src="blackjack.js"></script>
+    <script src="logCardDeck.js"></script>
   </body>
 </html>
