--- a/blackjack.html
+++ b/blackjack.html
@@ -7,5 +7,6 @@
     <script src="createCardDeck.js"></script>
     <script src="blackjack.js"></script>
     <script src="logCardDeck.js"></script>
+    <script src="createCardDeck.js"></script>
   </body>
 </html>
